# Ecommerce-API

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  pyproject.toml
alembic/: env.py
app/configs/: __init__.py  database.py  logger.py
app/models/: __init__.py  address.py  cart_item.py  category.py  coupon.py  customer.py  order.py  order_item.py  payment.py  product.py  shopping_cart.py
app/models/enums/: __init__.py  coupon.py  customer.py  order.py  payment.py
terraform/: main.tf  variables.tf
terraform/modules/ec2/: main.tf  variables.tf
terraform/modules/rds/: main.tf  outputs.tf  variables.tf
terraform/modules/vpc/: main.tf  outputs.tf
