[project]
name = "ecommerce-de"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.115.12",
    "mypy>=1.15.0",
    "pydantic>=2.11.3",
    "pytest>=8.3.5",
    "ruff>=0.11.6",
]

[tool.mypy]
python_version = "3.13"
strict = true
show_error_codes = true
disallow_untyped_defs = true
ignore_missing_imports = true
plugins = ["pydantic.mypy"]

[tool.ruff]
line-length = 88
select = [
    "E",
    "F",
    "W",
    "I",
    "N",
    "D",
    "B",
    "Q",
    "TCH"
]
ignore = [
    "D203",
    "D213"
]
target-version = "py313"

[tool.ruff.isort]
known-first-party = ["ecommerce_de"]