[project]
name = "ecommerce-de"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.15.2",
    "asyncpg>=0.30.0",
    "black>=25.1.0",
    "fastapi>=0.115.12",
    "loguru>=0.7.3",
    "mypy>=1.15.0",
    "pre-commit>=4.2.0",
    "pydantic-settings>=2.9.1",
    "pydantic[dotenv,email,mypy]>=2.11.3",
    "pytest>=8.3.5",
    "python-json-logger>=3.3.0",
    "rich>=14.0.0",
    "ruff>=0.11.6",
    "sqlalchemy>=2.0.40",
]

[tool.mypy]
python_version = "3.12"
show_error_codes = true
disallow_untyped_calls = true
disallow_untyped_defs = true
ignore_missing_imports = true

[tool.ruff]
line-length = 88
select = [
    "E",
    "F",
    "W",
    "I",
    "N",
    "D",
    "B",
    "Q",
    "TCH"
]
ignore = [
    "D203",
    "D213",
    "D100",
    "D101",
    "D102",
    "D103",
    "D104",
    "D105",
    "D106",
    "D107",
]
target-version = "py312"

[tool.ruff.isort]
known-first-party = ["ecommerce_de"]

[tool.black]
line-length = 88
target-version = ["py312"]
skip-string-normalization = false
